--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,11 @@
       "sizes": "128x128"
     },
     {
+      "src": "img/icons/logo-192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
       "src": "img/icons/logo-256.png",
       "type": "image/png",
       "sizes": "256x256"
